fix padding in select so doesnt overlap carat

--- a/static/sass/_dropdown.scss
+++ b/static/sass/_dropdown.scss
@@ -12,7 +12,7 @@
     font-size: 1.2em;
   	outline: none;
     margin: 0.8em 0.5em 1em 0;
-  	padding: .5em 1em;
+  	padding: .5em 1.6em .5em 1em;
     width: 100%;
   }
 
